--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -15,17 +15,36 @@
     display: flex;
     flex-direction: row;
     margin: 0 auto;
-    max-width: 1200px;
+    max-width: 75vw;
     overflow: auto hidden;
     scroll-snap-type: x mandatory;
     scrollbar-color: white green;
     z-index: 1;
 }
+
+#container figure {
+    flex: 0 0 100%;
+    scroll-snap-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    padding: 2rem;
+}
+
 figure:not(:first-of-type), figure:not(:last-of-type){
     scroll-snap-stop: always;
     scroll-snap-align: center;
-    padding: 5em 10em 0em 10em;
 }
+
+figure img {
+    max-width: 100%;
+    max-height: 80vh;
+    height: auto;
+    width: auto;
+}
+
 #container figure:first-child, #container figure:last-child{
     scroll-snap-align: none;
 }
